syntax="proto3";

import "course/user-srv/proto/dto/user.proto";
import "course/user-srv/proto/dto/basic.proto";
import "course/user-srv/proto/dto/resource.proto";
package user;

option go_package="course/user-srv/proto/user";

service UserService{
  // 用户接口
  rpc List(PageDto) returns (PageDto){}
  rpc Save(UserDto) returns (UserDto){}
  rpc Delete(String) returns (String){}
  rpc SavePassword(UserDto) returns (UserDto){}
  rpc Login(UserDto) returns (LoginUserDto){}
  rpc Logout(String) returns (String){}

  //权限管理
  rpc LoadTree(String) returns (ResourceDtoList);
  rpc SaveJson(String) returns (String);
  rpc DeleteResource(String) returns (String);
}

message UserDto{
  string id = 1;
  string name = 2;
  string login_name = 3;
  string password = 4;
}

message PageDto{
  int64 pageSize = 1;
  int64 pageNum = 2;
  string sortBy = 3;
  bool asc = 4;
  repeated UserDto users = 5;
}